# littlefs

./: CMakeLists.txt  Makefile  README-mine.md  README.md
.github/workflows/: test.yml
gtest/: CMakeLists.txt  lfs_powerloss_runner.h  lfs_test_fixture.cpp  lfs_test_fixture.h  lfs_test_internal.c  lfs_test_internal.h  lfs_test_macros.h  test_alloc.cpp  test_attrs.cpp  test_badblocks.cpp  test_bd.cpp  test_compat.cpp  test_dirs.cpp  test_entries.cpp  test_evil.cpp  test_exhaustion.cpp  test_files.cpp  test_interspersed.cpp  test_move.cpp  test_orphans.cpp  test_paths.cpp  test_powerloss.cpp  test_reentrant.cpp  test_relocations.cpp  test_seek.cpp  test_shrink.cpp  test_superblocks.cpp  test_truncate.cpp  test_wear_leveling.cpp
test/: lfs_test_bd.h  lfs_test_bd_emubd.c  lfs_test_compat.h
test/cases/: test_bd.c  test_bd.h
tests/: monolithic.sh
ztest/: CMakeLists.txt  prj.conf  testcase.yaml
ztest/boards/: mps2_an385.conf  mps2_an385.overlay
ztest/src/: lfs_test_bd_zephyr.c  lfs_ztest_common.h  main.c  test_alloc.c  test_attrs.c  test_dirs.c  test_entries.c  test_files.c  test_move.c  test_paths.c  test_seek.c  test_superblocks.c  test_truncate.c
